--- a/HomeSensors/HomeSensors.Console.csproj
+++ b/HomeSensors/HomeSensors.Console.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HomeSensors.Services\HomeSensors.Services.csproj" />
+  </ItemGroup>
+
 </Project>
